--- a/Web/Views/Home/Contact.cshtml
+++ b/Web/Views/Home/Contact.cshtml
@@ -7,7 +7,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Desarrolladores</h1>
+                <h1>ACERCA DE</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -26,6 +26,36 @@
     <div class="card card-solid">
         <div class="card-body pb-0">
             <div class="row">
+                <div class="col-12  d-flex align-items-stretch flex-column">
+                    <div class="card bg-light d-flex flex-fill">
+                        <div class="card-header text-muted border-bottom-0">
+                            INFORMACIÓN DEL SISTEMA
+                        </div>
+                        <div class="card-body pt-0">
+                            <div class="row col-md-12">
+                                <div class="col-md-6 col-sm-6">
+                                        <p class="text-muted text-sm d-block"><b>Nombre del sistema: </b> Naza Musical Note</p>
+                                        <p class="text-muted text-sm d-block"><b>Versión: </b> 1.0</p>
+                                        <p class="text-muted text-sm d-block"><b>Año de desarrollo: </b> 2021</p>
+                                </div>
+                                <div class="col-md-6 col-sm-6">
+                                    <div class="row">
+                                        <div class="col-md7">
+                                            <p class="text-muted text-sm d-block"><b>Institución: </b> Iglesia del Nazareno</p>
+                                            <p class="text-muted text-sm d-block"><b>Ubicación: </b> Poás de Alajuela</p>
+                                        </div>
+                                        <div class="col-md-1">
+                                            <img src="~/Content/dist/img/logo nazareno full primary.png" height="100px" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-12 col-sm-6 col-md-6 d-flex align-items-stretch flex-column">
                     <div class="card bg-light d-flex flex-fill">
                         <div class="card-header text-muted border-bottom-0">
@@ -43,19 +73,19 @@
                                     </ul>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <img src="~/Content/dist/img/logo-small.png" alt="imagen" class="img-circle img-fluid">
+                                    <img src="~/Content/dist/img/EA.jpg" alt="imagen" class="img-circle img-fluid">
                                 </div>
                             </div>
                         </div>
                         <div class="card-footer">
                             <div class="text-right">
-                                <a href="#" class="">
+                                <a href="https://www.facebook.com/eduardo.arley.7/" target="_blank">
                                     <i class="fab fa-facebook"></i>
                                 </a>
-                                <a href="#" class="">
+                                <a href="https://www.instagram.com/eduardo_arley/?hl=es" target="_blank">
                                     <i class="fab fa-instagram"></i>
                                 </a>
-                                <a href="#" class="">
+                                <a href="https://www.linkedin.com/in/eduardo-arley" target="_blank">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
                             </div>
@@ -81,19 +111,19 @@
                                     </ul>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <img src="~/Content/dist/img/logo-small.png" alt="imagen" class="img-circle img-fluid">
+                                    <img src="~/Content/dist/img/JM.jpg" alt="imagen" class="img-circle img-fluid">
                                 </div>
                             </div>
                         </div>
                         <div class="card-footer">
                             <div class="text-right">
-                                <a href="#" class="">
+                                <a href="https://www.facebook.com/josueruben.marchenaquiros.5" target="_blank">
                                     <i class="fab fa-facebook"></i>
                                 </a>
-                                <a href="#" class="">
+                                <a href="https://www.instagram.com/marchenarap/?hl=es" target="_blank">
                                     <i class="fab fa-instagram"></i>
                                 </a>
-                                <a href="#" class="">
+                                <a href="https://www.linkedin.com/in/josu%C3%A9-rub%C3%A9n-marchena-quir%C3%B3s-98a5711a3/" target="_blank">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
                             </div>
