--- a/Web/Views/Usuario/Details.cshtml
+++ b/Web/Views/Usuario/Details.cshtml
@@ -4,6 +4,7 @@
 
 @{ Infraestructure.Models.Usuario UsuarioLogueado = (Infraestructure.Models.Usuario)Session["User"]; }
 
+<link rel="stylesheet" href="~/Content/dist/css/img-modal.css" />
 
 <style>
     .imagen {
@@ -46,16 +47,16 @@
                     @if (Model.Foto != null)
                     {
                         <div class="col-md-8">
-                            <img class="imagen mt-3 mb-3" src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(Model.Foto)" id="ImagenUsuario" />
+                            <img class="imagen mt-3 mb-3 image" src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(Model.Foto)" id="photo" />
                         </div>
                     }
                     else
                     {
-                    <div class="text-center">
-                        <img src="~/Content/dist/img/avatar.png" id="ImagenUsuario" style="height: 150px; width: 150px; border-radius: 100px" />
-                        <br />
-                        <span class="badge badge-secondary">Sin foto de perfil</span>
-                    </div>
+                        <div class="text-center">
+                            <img src="~/Content/dist/img/avatar.png" id="ImagenUsuario" style="height: 150px; width: 150px; border-radius: 100px" />
+                            <br />
+                            <span class="badge badge-secondary">Sin foto de perfil</span>
+                        </div>
                     }
 
 
@@ -110,15 +111,29 @@
                 </a>
 
             </div>
+
         </div>
     </div>
-
+    <!-- Modal imagen -->
+    <div id="imgModal" class="modal">
+        <span class="close fas fa-times"></span>
+        <img class="modal-content" id="img01">
+        <div id="caption"><p>Imagen del usuario</p></div>
+    </div>
 
 </section>
 
+
+
+
+
+
 @section scripts {
+    <script src="~/Content/dist/js/img-modal.js"></script>
+
+
     <script>
-    //AQUI PARA PONER ACTIVO EL NAV-LINK, PONERSE EN CADA PAGINA
+        //AQUI PARA PONER ACTIVO EL NAV-LINK, PONERSE EN CADA PAGINA
         $(document).ready(function () {
             $("#menuusuarios").addClass('active');
         });</script>
