--- a/Web/Views/Shared/_Navigation.cshtml
+++ b/Web/Views/Shared/_Navigation.cshtml
@@ -12,7 +12,7 @@
 
         </li>
         <li class="nav-item d-sm-inline-block">
-            @Html.ActionLink("Contacto", "Contact", "Home", null, new { @class = "nav-link" })
+            @Html.ActionLink("Acerca", "Contact", "Home", null, new { @class = "nav-link" })
         </li>
         @if (UsuarioLogueado != null)
         {
