--- a/Web/Views/Cancion/Index.cshtml
+++ b/Web/Views/Cancion/Index.cshtml
@@ -50,9 +50,19 @@
                 <div class="card">
                     <div class="card-body">
                         <div style="float: right; cursor: pointer">
-                            <button class="btn" id="btnTooltip">
-                                <i class="fa fa-info-circle text-primary" style="font-size: x-large"></i>
-                            </button>
+                            @if (UsuarioLogueado.IdRol == 1)
+                            {
+                                <button class="btn" id="btnTooltipLider">
+                                    <i class="fa fa-info-circle text-primary" style="font-size: x-large"></i>
+                                </button>
+                            }
+
+                            @if (UsuarioLogueado.IdRol == 2)
+                            {
+                                <button class="btn" id="btnTooltipIntegrante">
+                                    <i class="fa fa-info-circle text-primary" style="font-size: x-large"></i>
+                                </button>
+                            }
                         </div>
                         <table id="example1" class="table table-bordered table-striped">
                             <thead>
@@ -176,9 +186,17 @@
     <script>
         // With the above scripts loaded, you can call `tippy()` with a CSS
         // selector and a `content` prop:
-        tippy('#btnTooltip', {
+        tippy('#btnTooltipLider', {
             content: 'Aquí se muestran las canciones que han sido creadas. ' +
                 'Puedes crear, consultar, editar y eliminar canciones desde sus respectivos botones.',
+            arrow: true,
+            animation: 'scale',
+            trigger: 'click',
+        });
+
+        tippy('#btnTooltipIntegrante', {
+            content: 'Aquí se muestran las canciones que han sido creadas. ' +
+                'Puedes consultar los detalles de las canciones desde el ojo de consulta.',
             arrow: true,
             animation: 'scale',
             trigger: 'click',
