Correccion lista usuarios Rol

--- a/Web/Views/Usuario/Index.cshtml
+++ b/Web/Views/Usuario/Index.cshtml
@@ -86,7 +86,7 @@
                                         @Html.DisplayNameFor(model => model.Estado)
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.Rol.Descripcion)
+                                        @Html.DisplayName("Rol")
                                     </th>
                                     @if (UsuarioLogueado.IdRol == 1)
                                     {
