Se sube el manual del lider, listos los manuales

--- a/Web/Views/Shared/_Navigation.cshtml
+++ b/Web/Views/Shared/_Navigation.cshtml
@@ -19,7 +19,7 @@
             if (UsuarioLogueado.IdRol == 1)
             {
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="~/Content/Manual/Integrante - Manual de usuario Naza Musical Note.docx.pdf">Ayuda <i class="far fa-question-circle"></i></a>
+                    <a class="nav-link" target="_blank" href="~/Content/Manual/Manual de usuario Naza Musical Note.docx.pdf">Ayuda <i class="far fa-question-circle"></i></a>
                 </li>
             }
             else
