--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -14,12 +14,14 @@
 
 
 
-    
+
 
     @RenderSection("styles", required: false)
     @Styles.Render("~/Content/adminlte")
     @Styles.Render("~/Content/sweetalert")
     <link rel="stylesheet" href="~/Content/dist/css/tooltip.css" />
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="~/Content/plugins/fontawesome-free/css/all.min.css">
 </head>
 <body class="hold-transition sidebar-mini layout-fixed sidebar-collapse">
 
