--- a/Web/Views/GestionCancion/Index.cshtml
+++ b/Web/Views/GestionCancion/Index.cshtml
@@ -127,7 +127,7 @@
         // With the above scripts loaded, you can call `tippy()` with a CSS
         // selector and a `content` prop:
         tippy('#btnTooltip', {
-            content: 'Aquí se muestran las canciones a las cuales se les pueden vincular videos de YouTube para deiferenciar las versiones que se utilizarán en cada una.',
+            content: 'Aquí se muestran las canciones a las cuales se les pueden vincular videos de YouTube para diferenciar las versiones que se utilizarán en cada una.',
             arrow: true,
             animation: 'scale',
             trigger: 'click',
