Se agregó el tema de verificación en 2 pasos en pantalla de correo

--- a/Web/Views/CorreoEmisor/Index.cshtml
+++ b/Web/Views/CorreoEmisor/Index.cshtml
@@ -85,7 +85,7 @@
                 <div class="callout callout-warning">
                     <div>
                         <h5><i class="icon fas fa-exclamation-triangle"></i> Aviso!</h5>
-                        <p>El correo electrónico que se utiliza, debe tener activado el acceso de aplicaciones menos seguras.</p>
+                        <p>El correo electrónico que se utiliza debe tener activo en el apartado de Seguridad de la cuenta de Google el acceso de aplicaciones menos seguras. Así mismo, se debe llevar a cabo la verificación en 2 pasos para poder asignar contraseñas de aplicaciones.</p>
                         <br />
                         <p>Para más información, <a style="color: blue" target="_blank" href="https://support.google.com/accounts/answer/6010255?hl=es-419">Haz click aquí</a></p>
                     </div>
